@@ -236,9 +236,13 @@
 			<script src="char_data.js"></script>
 			<script src="chars.js"></script>
 			<!-- the above scripts contain character data and a function to update the display to reflect stats -->
+			<!-- stores the stats for items -->
 			<script src="interactions/loot.js"></script>
+			<!-- handles inventory -->
 			<script src="interactions/equip.js"></script>
+			<!-- does combat -->
 			<script src="interactions/combat.js"></script>
+			<!-- runs the shop -->
 			<script src="interactions/shop.js"></script>
 			<!-- above scripts handle interactions -->
 			<!-- main script -->
